--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="atualizar">Atualizar</string>
     <string name="logo_com_gota_de_gua">Logo com gota de água</string>
     <string name="opa_temos_um_desperdicio">Opa! temos \num desperdício.</string>
-    <string name="parabens_voce_esta_economizando">Parabéns, você está economizando água.</string>
+    <string name="parabens_voce_esta_economizando">Parabéns, você está \neconomizando água.</string>
 </resources>
